<resources>
    <string name="app_name">Donatiun-2340</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_resolution">ResolutionActivity</string>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_donation_item_info">Donation Item Info Activity</string>
    <string name="name">Name</string>
    <string name="item_and_donor_information">Item and Donor Information</string>
    <string name="item_id">Item ID:</string>
    <string name="category">Category:</string>
    <string name="donor_phone_number">Donor Phone Number:</string>
    <string name="donor">Donor:</string>
    <string name="item_name">Item name:</string>
    <string name="delete">Delete</string>
    <string name="value">Value:</string>
    <string name="condition">Condition:</string>
    <string name="color">Color:</string>
    <string name="save">Save</string>
    <string name="Donor">Donor</string>
    <string name="Category">Category</string>
    <string name="Color">Color</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Value">Value</string>
    <string name="Condition">Conditon</string>
    <string name="ID">ID</string>
    <string name="Item_Name">Item Name</string>
    <string name="title_activity_maps">Map</string>
</resources>
